--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="universe">
-    <canvas id="canvas">df</canvas>
+    <canvas id="canvas"></canvas>
 </div>
 
 <script src="./universe.js"></script>
